Fixed CSS - still cant get label to vertically align text

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -36,6 +36,15 @@
   justify-content: center;
 }
 
+.flexy {
+  justify-content: space-around;
+  display: flex;
+}
+
+.auto-width {
+  width: auto;
+}
+
 table {
   width: 100%;
 }
